--- a/build.assets/Dockerfile
+++ b/build.assets/Dockerfile
@@ -82,25 +82,35 @@ ENV RUSTUP_HOME=/usr/local/rustup \
     PATH=/usr/local/cargo/bin:$PATH \
     RUST_VERSION=1.55.0
 
-RUN set -eux; \
-    dpkgArch="$(dpkg --print-architecture)"; \
-    case "${dpkgArch##*-}" in \
-        amd64) rustArch='x86_64-unknown-linux-gnu'; rustupSha256='3dc5ef50861ee18657f9db2eeb7392f9c2a6c95c90ab41e45ab4ca71476b4338' ;; \
-        armhf) rustArch='armv7-unknown-linux-gnueabihf'; rustupSha256='67777ac3bc17277102f2ed73fd5f14c51f4ca5963adadf7f174adf4ebc38747b' ;; \
-        arm64) rustArch='aarch64-unknown-linux-gnu'; rustupSha256='32a1532f7cef072a667bac53f1a5542c99666c4071af0c9549795bbdb2069ec1' ;; \
-        i386) rustArch='i686-unknown-linux-gnu'; rustupSha256='e50d1deb99048bc5782a0200aa33e4eea70747d49dffdc9d06812fd22a372515' ;; \
-        *) echo >&2 "unsupported architecture: ${dpkgArch}"; exit 1 ;; \
-    esac; \
-    url="https://static.rust-lang.org/rustup/archive/1.24.3/${rustArch}/rustup-init"; \
-    curl --output ./rustup-init "$url"; \
-    echo "${rustupSha256} *rustup-init" | sha256sum -c -; \
-    chmod +x rustup-init; \
-    ./rustup-init -y --no-modify-path --profile default --default-toolchain $RUST_VERSION --default-host ${rustArch}; \
-    rm rustup-init; \
+# RUN set -eux; \
+#     dpkgArch="$(dpkg --print-architecture)"; \
+#     case "${dpkgArch##*-}" in \
+#         amd64) rustArch='x86_64-unknown-linux-gnu'; rustupSha256='3dc5ef50861ee18657f9db2eeb7392f9c2a6c95c90ab41e45ab4ca71476b4338' ;; \
+#         armhf) rustArch='armv7-unknown-linux-gnueabihf'; rustupSha256='67777ac3bc17277102f2ed73fd5f14c51f4ca5963adadf7f174adf4ebc38747b' ;; \
+#         arm64) rustArch='aarch64-unknown-linux-gnu'; rustupSha256='32a1532f7cef072a667bac53f1a5542c99666c4071af0c9549795bbdb2069ec1' ;; \
+#         i386) rustArch='i686-unknown-linux-gnu'; rustupSha256='e50d1deb99048bc5782a0200aa33e4eea70747d49dffdc9d06812fd22a372515' ;; \
+#         *) echo >&2 "unsupported architecture: ${dpkgArch}"; exit 1 ;; \
+#     esac; \
+#     url="https://static.rust-lang.org/rustup/archive/1.24.3/${rustArch}/rustup-init"; \
+#     curl --output ./rustup-init "$url"; \
+#     echo "${rustupSha256} *rustup-init" | sha256sum -c -; \
+#     chmod +x rustup-init; \
+#     ./rustup-init -y --no-modify-path --profile default --default-toolchain $RUST_VERSION --default-host ${rustArch}; \
+#     rm rustup-init; \
+#     chmod -R a+w $RUSTUP_HOME $CARGO_HOME; \
+#     rustup --version; \
+#     cargo --version; \
+#     rustc --version;
+
+COPY --from=rust:1.55.0 /usr/local/rustup /usr/local/rustup
+COPY --from=rust:1.55.0 /usr/local/cargo /usr/local/cargo
+RUN set -eux \
     chmod -R a+w $RUSTUP_HOME $CARGO_HOME; \
+    rustup component add rustfmt clippy; \
     rustup --version; \
     cargo --version; \
     rustc --version;
+
 
 # Install etcd.
 RUN (curl -L https://github.com/coreos/etcd/releases/download/v3.3.9/etcd-v3.3.9-linux-amd64.tar.gz | tar -xz && \
