--- a/build.assets/Dockerfile
+++ b/build.assets/Dockerfile
@@ -86,7 +86,8 @@ ENV RUSTUP_HOME=/usr/local/rustup \
     PATH=/usr/local/cargo/bin:$PATH \
     RUST_VERSION=1.55.0
 
-COPY --from=rust:1.55.0 /usr/local/cargo /usr/local/rustup /usr/local/
+COPY --from=rust:1.55.0 /usr/local/rustup /usr/local/rustup
+COPY --from=rust:1.55.0 /usr/local/cargo /usr/local/cargo
 RUN set -eux \
     rustup component add rustfmt clippy; \
     chmod -R a+w $RUSTUP_HOME $CARGO_HOME; \
